--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style='color:white'>
 
-  <div class="container">
+  <div class="container bo">
     <div class="col">
       <h1 id='for'>Weather Forecast</h1>
 
